@@ -2,6 +2,11 @@
 // $Id$
 
 class panels_mini_ui extends ctools_export_ui {
+  function init($plugin) {
+    parent::init($plugin);
+    ctools_include('context');
+  }
+
   function list_form(&$form, &$form_state) {
     ctools_include('plugins', 'panels');
     $this->layouts = panels_get_layouts();
@@ -282,6 +287,6 @@ class panels_mini_ui extends ctools_export_ui {
 
   function edit_form_content_submit(&$form, &$form_state) {
     panels_edit_display_form_submit($form, $form_state);
+    $form_state['item']->display = $form_state['display'];
   }
-
 }
